external-crates/move/crates/move-compiler/tests/move_2024/matching/abc_match_no_drop_exhaustive_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/matching/abc_match_no_drop_exhaustive_invalid.move:14:13
   │
 3 │     public enum ABC<T> {
   │                 --- To satisfy the constraint, the 'drop' ability would need to be added here
   ·
10 │         match (ABC::C(0)) {
   │                --------- The type '0x42::m::ABC<u64>' does not have the ability 'drop'
   ·
14 │             _ => 1,
   │             ^ Cannot ignore values without the 'drop' ability. '_' patterns discard their values
